Update README with remarks about using current versions of Java.